# vigir_control_msgs

./: CMakeLists.txt  CMakeLists.txt.bak  package.xml  package.xml.bak
msg/: VigirControlMode.msg  VigirControlModeCommand.msg  VigirControllerFunctionUpdate.msg  VigirControllerStatistics.msg  VigirExecuteMotionCommand.msg  VigirGravityCompensationGain.msg  VigirPPSOffset.msg  VigirRobotFault.msg  VigirRobotStateCommand.msg  VigirRobotStatus.msg
srv/: FlorExecuteMotion.srv
